<resources>
  <string name="properties">Properties</string>
  <string name="selling">Selling</string>
  <string name="property_name">The Beaumont</string>
  <string name="built_up">Built up</string>

  <string name="tab_properties">Properties</string>
  <string name="tab_profile">Profile</string>
  <string name="tab_settings">Settings</string>

  <string name="process_tracker">Process Tracker</string>
  <string name="otp_expires_27_may_2017">OTP Expires 27 May 2017</string>
  <string name="sign_otp">Sign OTP</string>
  <string name="disclaimer">Declaration</string>
  <string name="sign">Sign</string>
  <string name="clear">Clear</string>
  <string name="reject_otp">Reject OTP?</string>
  <string name="reject_otp_des">If you choose to cancel the OTP it will be send back to your agent
    to amend. Are you sure you want to cancel?</string>
  <string name="extent_otp">Extent OTP</string>
  <string name="need_a_loan">Need a loan</string>
  <string name="salutation">Salutation</string>
  <string name="_65">+65</string>
  <string name="cancel">Cancel</string>
  <string name="find_add">Find address</string>
  <string name="company">Company</string>
  <string name="reg">Reg</string>
  <string name="com_address">Company Address</string>
  <string name="loan_form">Loan Form</string>
  <string name="new_loan">New Loan</string>
  <string name="refinance">Refinance</string>
  <string name="private_res">Private Residential</string>
  <string name="hdb">HDB</string>
  <string name="is_property">Is the property already built or under construction?</string>
  <string name="uncomplete">Uncomplete</string>
  <string name="construction_status">Construction Status</string>
  <string name="rates">Rates</string>
  <string name="fixed">Fixed</string>
  <string name="floating">Floating</string>
  <string name="both">Both</string>
  <string name="loan_amount">Loan amount</string>
  <string name="$">$</string>
  <string name="loan_tenure">Loan tenure(years)</string>
  <string name="contact_number">Contact Number</string>
  <string name="agree_to_the">I agree to the</string>
  <string name="term_condition">Terms and conditions</string>
  <string name="submit">Submit</string>
  <string name="existing_loan_amount">Existing loan amount</string>
  <string name="current_interest">Current Interest Rate</string>
  <string name="current_financer">Current Financer</string>
  <string name="nric_fin_reg">NRIC/FIN/Reg</string>
  <string name="corporate_company">The subject property is owned by Corporate Company</string>
  <string name="date_of_birth">Date of Birth</string>
  <string name="residency_stt">Residency Status</string>
  <string name="singapore_citizen">Singapore Citizen</string>
  <string name="singapore_permanent_resident">Singapore Permanent Resident</string>
  <string name="foreigner">Foreigner</string>
  <string name="change_profile_successfully">Your profile has been successfully changed</string>
  <string name="type_seller">seller</string>
  <string name="type_buyer">buyer</string>
  <string name="type_complete">complete</string>
  <string name="id">ID</string>
  <string name="otp_will_be_assigned_to">OTP will be assigned to buyer\'s side when all owners have signed.</string>
  <string name="otp_will_be_exercised_when">OTP will be exercised when all the buyers have signed.</string>
  <string name="loan_details">Loan Details</string>
  <string name="reference">Reference</string>
  <string name="reference_number">Reference number</string>
  <string name="percent_user">%</string>
  <string name="declaration_owner">I confirm that my agent has explained to me the content of the OTP and I understood it. </string>
  <string name="check_before_signing">Check before signing</string>
</resources>
