<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:id="@+id/loan_form_details_layout"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/bg_grey"
  android:orientation="vertical">

  <customview.CustomHeaderView
    android:id="@+id/loan_form_details_header_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:custom_header_left_action_ic_src="@drawable/ic_back"
    app:custom_header_title="@string/refinance" />

  <ScrollView
    android:id="@+id/loan_form_details_scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical">

      <LinearLayout style="@style/LinearLayoutLoan">

        <TextView
          style="@style/TextViewBase.HeaderLoan"
          android:fontFamily="sans-serif-medium"
          android:text="@string/property_type" />

        <LinearLayout style="@style/ItemLayoutLoan">

          <TextView
            style="@style/TextViewBase.TitleText.Loan"
            android:text="@string/private_res" />

          <RadioButton
            android:id="@+id/loan_form_details_private_residential_rb"
            style="@style/RadioButtonLoan" />
        </LinearLayout>

        <View style="@style/DivideLine.LightGray" />

        <LinearLayout style="@style/ItemLayoutLoan">

          <TextView
            style="@style/TextViewBase.TitleText.Loan"
            android:text="@string/hdb" />

          <RadioButton
            android:id="@+id/loan_form_details_hdb_rb"
            style="@style/RadioButtonLoan" />
        </LinearLayout>

        <View style="@style/DivideLine.LightGray" />
      </LinearLayout>

      <LinearLayout
        android:id="@+id/loan_form_details_construction_status_layout"
        style="@style/LinearLayoutLoan">

        <TextView
          style="@style/TextViewBase.HeaderLoan"
          android:fontFamily="sans-serif-medium"
          android:text="@string/construction_status" />

        <TextView
          style="@style/TextViewBase"
          android:layout_marginLeft="@dimen/margin_8dp"
          android:layout_marginTop="@dimen/margin_4dp"
          android:text="@string/is_property"
          android:textColor="@color/tc_black54"
          android:textSize="@dimen/ts_14sp" />

        <LinearLayout style="@style/ItemLayoutLoan">

          <TextView
            style="@style/TextViewBase.TitleText.Loan"
            android:text="@string/completed" />

          <RadioButton
            android:id="@+id/loan_form_details_completed_rb"
            style="@style/RadioButtonLoan" />
        </LinearLayout>

        <View style="@style/DivideLine.LightGray" />

        <LinearLayout style="@style/ItemLayoutLoan">

          <TextView
            style="@style/TextViewBase.TitleText.Loan"
            android:text="@string/uncomplete" />

          <RadioButton
            android:id="@+id/loan_form_details_uncomplete_rb"
            style="@style/RadioButtonLoan" />
        </LinearLayout>

        <View style="@style/DivideLine.LightGray" />
      </LinearLayout>

      <LinearLayout style="@style/LinearLayoutLoan">

        <TextView
          style="@style/TextViewBase.HeaderLoan"
          android:fontFamily="sans-serif-medium"
          android:text="@string/rates" />

        <LinearLayout style="@style/ItemLayoutLoan">

          <TextView
            style="@style/TextViewBase.TitleText.Loan"
            android:text="@string/fixed" />

          <RadioButton
            android:id="@+id/loan_form_details_fixed_rb"
            style="@style/RadioButtonLoan" />
        </LinearLayout>

        <View style="@style/DivideLine.LightGray" />

        <LinearLayout style="@style/ItemLayoutLoan">

          <TextView
            style="@style/TextViewBase.TitleText.Loan"
            android:text="@string/floating" />

          <RadioButton
            android:id="@+id/loan_form_details_floating_Rb"
            style="@style/RadioButtonLoan" />
        </LinearLayout>

        <View style="@style/DivideLine.LightGray" />

        <LinearLayout style="@style/ItemLayoutLoan">

          <TextView
            style="@style/TextViewBase.TitleText.Loan"
            android:text="@string/both" />

          <RadioButton
            android:id="@+id/loan_form_details_both_rb"
            style="@style/RadioButtonLoan" />
        </LinearLayout>

        <View style="@style/DivideLine.LightGray" />
      </LinearLayout>

      <LinearLayout style="@style/LinearLayoutLoan">

        <TextView
          android:id="@+id/loan_form_details_loan_amount_tv"
          style="@style/TextViewBase.HeaderLoan"
          android:fontFamily="sans-serif-medium"
          android:text="@string/existing_loan_amount" />

        <LinearLayout
          style="@style/ItemLayoutLoan"
          android:orientation="horizontal">

          <TextView
            style="@style/TextViewBase.TitleText.Loan"
            android:text="@string/$" />

          <EditText
            android:id="@+id/loan_form_details_loan_amount_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_8dp"
            android:background="@color/white"
            android:inputType="number" />

        </LinearLayout>
      </LinearLayout>

      <LinearLayout
        android:id="@+id/loan_form_details_current_financer_layout"
        style="@style/LinearLayoutLoan">

        <TextView
          style="@style/TextViewBase.HeaderLoan"
          android:fontFamily="sans-serif-medium"
          android:text="@string/current_financer" />

        <LinearLayout style="@style/ItemLayoutLoan">

          <Spinner
            android:id="@+id/loan_form_details_current_financer_sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        </LinearLayout>
      </LinearLayout>

      <LinearLayout
        android:id="@+id/loan_form_details_current_interest_rate_layout"
        style="@style/LinearLayoutLoan">

        <TextView
          style="@style/TextViewBase.HeaderLoan"
          android:fontFamily="sans-serif-medium"
          android:text="@string/current_interest" />

        <LinearLayout
          style="@style/ItemLayoutLoan"
          android:orientation="horizontal">

          <EditText
            android:id="@+id/loan_form_details_current_interest_rate_et"
            style="@style/TextViewBase.TitleText.Loan"
            android:background="@android:color/transparent"
            android:hint="0%"
            android:inputType="number|numberDecimal"
            android:textColorHint="@color/tc_black54" />

        </LinearLayout>
      </LinearLayout>

      <LinearLayout style="@style/LinearLayoutLoan">

        <TextView
          style="@style/TextViewBase.HeaderLoan"
          android:fontFamily="sans-serif-medium"
          android:text="@string/loan_tenure" />

        <LinearLayout
          style="@style/ItemLayoutLoan"
          android:paddingTop="@dimen/padding_8dp">

          <customview.CustomPropertyDetails
            android:id="@+id/loan_form_details_loan_tenure_cpd"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_56dp" />

        </LinearLayout>
      </LinearLayout>

      <LinearLayout style="@style/LinearLayoutLoan">

        <TextView
          style="@style/TextViewBase.HeaderLoan"
          android:fontFamily="sans-serif-medium"
          android:text="@string/name" />

        <LinearLayout style="@style/ItemLayoutLoan">

          <EditText
            android:id="@+id/loan_form_details_name_et"
            style="@style/TextViewBase.TitleText.Loan"
            android:background="@android:color/transparent"
            android:hint="@string/full_name"
            android:textColorHint="@color/tc_black54" />

        </LinearLayout>
      </LinearLayout>

      <LinearLayout style="@style/LinearLayoutLoan">

        <TextView
          style="@style/TextViewBase.HeaderLoan"
          android:fontFamily="sans-serif-medium"
          android:text="@string/contact_number" />

        <LinearLayout style="@style/ItemLayoutLoan"
          android:orientation="horizontal">

          <Spinner
            android:id="@+id/loan_form_details_phone_code_sp"
            android:layout_width="@dimen/size_88dp"
            android:layout_height="wrap_content" />

          <EditText
            android:id="@+id/loan_form_details_phone_et"
            style="@style/TextViewBase.TitleText.Loan"
            android:background="@android:color/transparent"
            android:inputType="number"
            android:textColorHint="@color/tc_black54" />

        </LinearLayout>
      </LinearLayout>

      <LinearLayout style="@style/LinearLayoutLoan">

        <TextView
          style="@style/TextViewBase.HeaderLoan"
          android:fontFamily="sans-serif-medium"
          android:text="@string/email" />

        <LinearLayout style="@style/ItemLayoutLoan">

          <EditText
            android:id="@+id/loan_form_details_email_et"
            android:inputType="textEmailAddress"
            style="@style/TextViewBase.TitleText.Loan"
            android:background="@android:color/transparent"
            android:hint="@string/email"
            android:textColorHint="@color/tc_black54" />

        </LinearLayout>
      </LinearLayout>

      <LinearLayout
        style="@style/LinearLayoutLoan"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/padding_16dp"
        android:paddingTop="@dimen/padding_16dp">

        <LinearLayout
          android:layout_width="@dimen/size_0dp"
          android:layout_height="wrap_content"
          android:layout_marginStart="@dimen/margin_8dp"
          android:layout_weight="1"
          android:orientation="vertical">

          <TextView
            style="@style/TextViewBase.TitleText"
            android:text="@string/agree_to_the" />

          <TextView
            android:id="@+id/loan_form_details_term_of_condition_tv"
            style="@style/TextViewBase.TitleText"
            android:layout_marginTop="@dimen/margin_4dp"
            android:text="@string/term_condition"
            android:textColor="@color/colorPrimary" />
        </LinearLayout>

        <RadioButton
          android:id="@+id/loan_form_details_term_of_condition_rb"
          style="@style/RadioButtonLoan" />
      </LinearLayout>

      <customview.CustomButton
        android:id="@+id/loan_form_details_submit_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_48dp"
        app:custom_button_text="@string/submit" />
    </LinearLayout>
  </ScrollView>


</LinearLayout>
